# pamr_amrd

./: .gitignore  .laliases  COPYRIGHT  KNOWN_ISSUES  LR_NOTE  Makefile.in  aclocal.m4  configure  configure.in
Archive/: .configure.in.swp  Makefile  aclocal.m4  configure  configure.in
Archive/CVS/: Entries  Repository
CVS/: Entries  Repository
amrd/: Makefile.in  amrd.c  cls.c  cls.h  cls_.c  evolve.c  evolve.h  globals.h  globals_.c  io.c  io.h  mg.h  mg_.c  pseudo_code  regrid_script.c  util.h  util_.c
amrd/CVS/: Entries  Repository
app_nbs/: .laliases  README
app_nbs/CVS/: Entries  Repository
doc/: AMRD_ref.tex  Makefile.in  PAMR_ref.tex
doc/CVS/: Entries  Repository
doc/html/: AMRD_MG_flow.html  AMRD_evolution_flow.html  AMRD_top_level_flow.html
examples/CVS/: Repository
examples/nbs/: Makefile.in  nbs.c  nbs.fparam  num.f
examples/wave/: Makefile.in  pamr-wave.sh  wave.c
exp_metrics/CVS/: Repository
exp_metrics/diag_3d/: README
exp_metrics/diag_3d_da/: README
exp_metrics/prod_3d/: README
fc3d/: .laliases  README
fc3d/CVS/: Entries  Repository
include/: amrd.h  internal_opts.h  m_util_r8.h  pamr.h
include/CVS/: Entries  Repository
lib/CVS/: Repository
src/: Makefile.in  gh.c  gh.h  io.c  io_.c  m_util_r8.f  misc.c  pamr.c  transfer.c  transfer.h
src/Archive/: Makefile
src/CVS/: Entries  Repository
test/: Makefile.in  test1.c
test/CVS/: Entries  Repository
w/: Makefile  Makefile.in  README
w/CVS/: Entries  Repository
w/amrd/: Makefile  Makefile.in  amrd_w.c  cls_w.c  cls_w.h  evolve_w.c  evolve_w.h  globals_w.c  globals_w.h  io_w.c  io_w.h  mg_w.c  mg_w.h  regrid_script_w.c  regrid_script_w.h  util_w.c  util_w.h
w/doc/: AMRD_ref.tex  AMRD_ref.toc  Makefile.in  PAMR_ref.tex  PAMR_ref.toc  (+2 more)
(+150 files in other folders)
