dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)

dnl Determine system type
BBH_SYS_GETSYSTEM

dnl Checks for programs
AC_PROG_CC
AC_CHECK_PROG(PERL,perl,perl,no)
AC_CHECK_PROG(RANLIB,ranlib,ranlib,touch)
AC_CHECK_PROG(AR,ar,ar,touch)

BBH_F77_CONFIGURE

AC_CHECK_LIB(mpi, MPI_Comm_rank)
AC_CHECK_LIB(m, sin)
AC_CHECK_HEADER(mpi.h)
BBH_CHECK_LIBS("bbhutil sv",
               "$LIB_PATHS /usr/lib64 /usr/lib /usr/local/lib",APP_LIB_PATHS,LIBS,yes)

AC_SUBST(BBH_DEFS)

AC_OUTPUT(Makefile src/Makefile)
